RESOLVED FIXED280578
REGRESSION: 282146@main made text entry in a quip document very slow
https://bugs.webkit.org/show_bug.cgi?id=280578
Summary REGRESSION: 282146@main made text entry in a quip document very slow
Chris Dumez
Reported 2024-09-28 20:00:05 PDT
282146@main made text entry in a quip document very slow. Most CPU Time is spent under: ``` Sample Count, Samples%, Normalized CPU %, Symbol 3581, 14.4%, 4.4%, WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) (in WebCore) 2685, 10.8%, 3.3%, WTF::WeakHashMap<WebCore::Node, unsigned int, WebCore::WeakPtrImplWithEventTargetData>::removeNullReferences() (in WebCore) ```
Attachments
Chris Dumez
Comment 1 2024-09-28 20:00:13 PDT
Chris Dumez
Comment 2 2024-09-28 20:05:33 PDT
EWS
Comment 3 2024-09-29 10:46:00 PDT
Committed 284431@main (64afe80b60e5): <https://commits.webkit.org/284431@main> Reviewed commits have been landed. Closing PR #34419 and removing active labels.
EWS
Comment 4 2024-09-30 10:08:13 PDT
Committed 283286.153@safari-7620-branch (e7d08ea14e51): <https://commits.webkit.org/283286.153@safari-7620-branch> Reviewed commits have been landed. Closing PR #1931 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.