Cherry-pick 284431@main (64afe80b60e5). https://bugs.webkit.org/show_bug.cgi?id=280578

REGRESSION: 282146@main made text entry in a quip document very slow
    https://bugs.webkit.org/show_bug.cgi?id=280578
    rdar://136905905

    Reviewed by Darin Adler.

    In 282146@main, I converted EventTargetSet from a `HashCountedSet<Node*>` to a
    `WeakHashCountedSet<Node>` for safety reasons. However, this set is used in hot
    code and we end up spending a lot of time in WeakHashMap's amortized cleanup
    on certain pages.

    To address the performance issue while maintaining safety, I am now using a
    `HashCountedSet<CheckedPtr<Node>>`.

    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::willBeRemovedFromFrame):
    (WebCore::Document::wheelEventHandlersChanged):
    (WebCore::Document::didAddWheelEventHandler):
    (WebCore::removeHandlerFromSet):
    (WebCore::Document::didAddTouchEventHandler):
    (WebCore::Document::didRemoveEventTargetNode):
    (WebCore::Document::absoluteRegionForEventTargets):
    * Source/WebCore/dom/Document.h:
    (WebCore::Document::hasTouchEventHandlers const):
    (WebCore::Document::hasWheelEventHandlers const):

    Canonical link: https://commits.webkit.org/284431@main

Canonical link: https://commits.webkit.org/282416.189@webkitglib/2.46